syntax = "proto3";

option go_package="./pb";
package pb;

//import "commentsInfo.proto";

//评论信息
message CommentsInfoBase{
    uint64 id = 1;
    string content = 2;
    uint64 userId = 3;
    uint64 postId = 4;
    uint64 createdAt = 5;
    uint64 updatedAt = 6;
    uint64 deletedAt = 7;
}

message CommentsInfoList{
    repeated CommentsInfoBase commentsInfoList = 1;
}

message CommentsInfoId{
    uint64 id = 1;
}

message CommentPostId{
    uint64 postId = 1;
}

message UserInfoId{
    uint64 userId = 1;
}

message CommentsInfoListPage{
    repeated CommentsInfoBase commentsInfoList = 1;
    uint64 total = 2;
    uint64 page = 3;
    uint64 pageSize = 4;
}

message CommentsInfoDetail{
    CommentsInfoBase commentsInfo = 1;
}

message CommentsInfoCreateRequest{
    CommentsInfoBase commentsInfo = 1;
}

message CommentsInfoDeleteRequest{
    uint64 id = 1;
}

message CommentsInfoDeleteResponse{
    bool success = 1;
}

//帖子信息
message PostInfoBase{
    uint64 id = 1;
    string title = 2;
    string content = 3;
    uint64 userId = 4;
    uint64 createdAt = 5;
    uint64 updatedAt = 6;
    uint64 deletedAt = 7;
}

message PostInfoList{
    repeated PostInfoBase postInfoList = 1;
}

message PostInfoListPage{
    repeated PostInfoBase postInfoList = 1;
    uint64 total = 2;
    uint64 page = 3;
    uint64 pageSize = 4;
}

message PostInfoId{
    uint64 id = 1;
}

message PostInfoDetail{
    PostInfoBase postInfo = 1;
}

message PostInfoDetailWithComments{
    PostInfoBase postInfo = 1;
    repeated CommentsInfoListPage commentsInfoList = 2;
}

message PostInfoCreateRequest{
    PostInfoBase postInfo = 1;
}

message PostInfoUpdateRequest{
    PostInfoBase postInfo = 1;
}

message PostInfoDeleteResponse{
    bool success = 1;
}

message execRows{
    uint64 rows = 1;
}

message PostInfoCountRequest{
    uint64 userId = 1;
}

message PostInfoCountResponse{
    uint64 count = 1;
}
//请求msg
message PostSearchRequest{
    string keyword = 1;
    uint64 userId=2; 
    uint64 page = 3;
    uint64 pageSize = 4;
    uint64 startDate = 5;
    uint64 endDate = 6;
    string status = 7;
}


service PostInfo{
    rpc GetPostListPage(PostSearchRequest) returns (PostInfoListPage);
    rpc GetPostDetail(PostInfoId) returns (PostInfoDetailWithComments);
    rpc CreatePost(PostInfoCreateRequest) returns (PostInfoId);
    rpc DeletePost(PostInfoId) returns (PostInfoDeleteResponse);
    rpc UpdatePost(PostInfoBase) returns (execRows);
    rpc GetCommentsInfoListPage(CommentPostId) returns (CommentsInfoListPage);
    rpc GetCommentsInfoDetail(CommentsInfoId) returns (CommentsInfoDetail);
    rpc CreateCommentsInfo(CommentsInfoCreateRequest) returns (CommentsInfoId);
    rpc DeleteCommentsInfo(CommentsInfoId) returns (CommentsInfoDeleteResponse);
}

//service CommentsInfo{
    
//}