syntax = "proto3";

option go_package = "./pb";
package pb;

message UserInfo{
    uint64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    uint64 postNum = 5;
    string status = 6;
    uint64  createdAt = 7;
    uint64  updatedAt = 8;
    uint64  deletedAt = 9;
}